include scripts in index.html
git-svn-id: file:///srv/svn/repos/futurice_reservator@11 967a2e56-9f69-44db-a86b-3acc15697453

--- a/ui/trunk/index.html
+++ b/ui/trunk/index.html
@@ -26,11 +26,10 @@
 
   <div id="container">
     <header>
-
+        <h1>Reservator</h1>
     </header>
     
     <div id="main">
-
     </div>
     
     <footer>
@@ -41,11 +40,16 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js"></script>
   <script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.4.4.js"%3E%3C/script%3E'))</script>
+  <script src="js/plugins/jquery.tmpl.min.js"></script>
+  <script src="js/plugins/pubsub.js"></script>
   
   
   <!-- scripts concatenated and minified via ant build script-->
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/Room.js"></script>
+  <script src="js/Reservation.js"></script>
+  <script src="js/FR.js"></script>
   <!-- end concatenated and minified scripts-->
   
   
