moved template to index.html, added table for room timetable
git-svn-id: file:///srv/svn/repos/futurice_reservator@16 967a2e56-9f69-44db-a86b-3acc15697453

--- a/ui/trunk/index.html
+++ b/ui/trunk/index.html
@@ -37,13 +37,317 @@
 
     </footer>
   </div> <!-- end of #container -->
-
-
+  
+  <table>
+      <tr>
+          <th class="hour">
+              8
+          </th>
+          <td class="hour d0-8-00">
+          </td>
+          <td class="hour d1-8-00">
+          </td>
+          <td class="hour d2-8-00">
+          </td>
+          <td class="hour d3-8-00">
+          </td>
+          <td class="hour d4-8-00">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              8.30
+          </th>
+          <td class="hour d0-8-30">
+          </td>
+          <td class="hour d1-8-30">
+          </td>
+          <td class="hour d2-8-30">
+          </td>
+          <td class="hour d3-8-30">
+          </td>
+          <td class="hour d4-8-30">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              9
+          </th>
+          <td class="hour d0-9-00">
+          </td>
+          <td class="hour d1-9-00">
+          </td>
+          <td class="hour d2-9-00">
+          </td>
+          <td class="hour d3-9-00">
+          </td>
+          <td class="hour d4-9-00">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              9.30
+          </th>
+          <td class="hour d0-9-30">
+          </td>
+          <td class="hour d1-9-30">
+          </td>
+          <td class="hour d2-9-30">
+          </td>
+          <td class="hour d3-9-30">
+          </td>
+          <td class="hour d4-9-30">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              10
+          </th>
+          <td class="hour d0-10-00">
+          </td>
+          <td class="hour d1-10-00">
+          </td>
+          <td class="hour d2-10-00">
+          </td>
+          <td class="hour d3-10-00">
+          </td>
+          <td class="hour d4-10-00">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              10.30
+          </th>
+          <td class="hour d0-10-30">
+          </td>
+          <td class="hour d1-10-30">
+          </td>
+          <td class="hour d2-10-30">
+          </td>
+          <td class="hour d3-10-30">
+          </td>
+          <td class="hour d4-10-30">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              11
+          </th>
+          <td class="hour d0-11-00">
+          </td>
+          <td class="hour d1-11-00">
+          </td>
+          <td class="hour d2-11-00">
+          </td>
+          <td class="hour d3-11-00">
+          </td>
+          <td class="hour d4-11-00">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              11.30
+          </th>
+          <td class="hour d0-11-30">
+          </td>
+          <td class="hour d1-11-30">
+          </td>
+          <td class="hour d2-11-30">
+          </td>
+          <td class="hour d3-11-30">
+          </td>
+          <td class="hour d4-11-30">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              12
+          </th>
+          <td class="hour d0-12-00">
+          </td>
+          <td class="hour d1-12-00">
+          </td>
+          <td class="hour d2-12-00">
+          </td>
+          <td class="hour d3-12-00">
+          </td>
+          <td class="hour d4-12-00">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              12.30
+          </th>
+          <td class="hour d0-12-30">
+          </td>
+          <td class="hour d1-12-30">
+          </td>
+          <td class="hour d2-12-30">
+          </td>
+          <td class="hour d3-12-30">
+          </td>
+          <td class="hour d4-12-30">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              13
+          </th>
+          <td class="hour d0-13-00">
+          </td>
+          <td class="hour d1-13-00">
+          </td>
+          <td class="hour d2-13-00">
+          </td>
+          <td class="hour d3-13-00">
+          </td>
+          <td class="hour d4-13-00">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              13.30
+          </th>
+          <td class="hour d0-13-30">
+          </td>
+          <td class="hour d1-13-30">
+          </td>
+          <td class="hour d2-13-30">
+          </td>
+          <td class="hour d3-13-30">
+          </td>
+          <td class="hour d4-13-30">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              14
+          </th>
+          <td class="hour d0-14-00">
+          </td>
+          <td class="hour d1-14-00">
+          </td>
+          <td class="hour d2-14-00">
+          </td>
+          <td class="hour d3-14-00">
+          </td>
+          <td class="hour d4-14-00">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              14.30
+          </th>
+          <td class="hour d0-14-30">
+          </td>
+          <td class="hour d1-14-30">
+          </td>
+          <td class="hour d2-14-30">
+          </td>
+          <td class="hour d3-14-30">
+          </td>
+          <td class="hour d4-14-30">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              15
+          </th>
+          <td class="hour d0-15-00">
+          </td>
+          <td class="hour d1-15-00">
+          </td>
+          <td class="hour d2-15-00">
+          </td>
+          <td class="hour d3-15-00">
+          </td>
+          <td class="hour d4-15-00">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              15.30
+          </th>
+          <td class="hour d0-15-30">
+          </td>
+          <td class="hour d1-15-30">
+          </td>
+          <td class="hour d2-15-30">
+          </td>
+          <td class="hour d3-15-30">
+          </td>
+          <td class="hour d4-15-30">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              16
+          </th>
+          <td class="hour d0-16-00">
+          </td>
+          <td class="hour d1-16-00">
+          </td>
+          <td class="hour d2-16-00">
+          </td>
+          <td class="hour d3-16-00">
+          </td>
+          <td class="hour d4-16-00">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              16.30
+          </th>
+          <td class="hour d0-16-30">
+          </td>
+          <td class="hour d1-16-30">
+          </td>
+          <td class="hour d2-16-30">
+          </td>
+          <td class="hour d3-16-30">
+          </td>
+          <td class="hour d4-16-30">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              17
+          </th>
+          <td class="hour d0-17-00">
+          </td>
+          <td class="hour d1-17-00">
+          </td>
+          <td class="hour d2-17-00">
+          </td>
+          <td class="hour d3-17-00">
+          </td>
+          <td class="hour d4-17-00">
+          </td>
+      </tr>
+      <tr>
+          <th class="hour">
+              17.30
+          </th>
+          <td class="hour d0-17-30">
+          </td>
+          <td class="hour d1-17-30">
+          </td>
+          <td class="hour d2-17-30">
+          </td>
+          <td class="hour d3-17-30">
+          </td>
+          <td class="hour d4-17-30">
+          </td>
+      </tr>
+  </table>
+  
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js"></script>
   <script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.4.4.js"%3E%3C/script%3E'))</script>
   <script src="js/plugins/jquery.tmpl.min.js"></script>
   <script src="js/plugins/pubsub.js"></script>
-  
+  <script type="text/html" id="room_template">
+    <div><div class="room" id="room_${number}" style="left:${location[0]}px"><b>${name}</b> (${number})</div></div>
+  </script>
   
   <!-- scripts concatenated and minified via ant build script-->
   <script src="js/plugins.js"></script>
@@ -60,8 +364,6 @@
   <![endif]-->
 
   <!-- yui profiler and profileviewer - remove for production -->
-  <script src="js/profiling/yahoo-profiling.min.js"></script>
-  <script src="js/profiling/config.js"></script>
   <!-- end profiling code -->
 
 
