--- a/ui/trunk/index.html
+++ b/ui/trunk/index.html
@@ -346,7 +346,10 @@
   <script src="js/plugins/jquery.tmpl.min.js"></script>
   <script src="js/plugins/pubsub.js"></script>
   <script type="text/x-jquery-tmpl" id="room_template">
-    <div class="room" id="room_${number}" style="left:${location[0]}px;top:${location[1]}px;width:${location[2]}px;height:${location[3]}px;"><b>${name}</b> (${number})</div>
+    <div class="room" id="room_${number}" style="left:${location[0]}px;top:${location[1]}px;width:${location[2]}px;height:${location[3]}px;">
+    	<div class="title"><b>${name}</b> (${number})</div>
+		<div class="content"></div>
+	</div>
   </script>
   
   <!-- scripts concatenated and minified via ant build script-->
